opam-version: "2.0"
name: "sterne"
version: "~dev"
synopsis: "Planification de plongée"
maintainer: "Thibault Suzanne <thi.suzanne@gmail.com>"
authors: "Thibault Suzanne <thi.suzanne@gmail.com>"
homepage: "https://github.com/thizanne/sterne"
bug-reports: "https://github.com/thizanne/sterne/issues"
depends: [
  "dune" {build}
]
build: ["dune" "build" "-p" name "-j" jobs]
install: ["dune" "install"]
dev-repo: "git+https://github.com/thizanne/sterne"
url {
  src: "git+file:///home/thibault/sterne#master"
}
